--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Vue/Vite app deployed on Netlify</title>
 		<link rel="icon" href="/images/favicon.png" />
 	</head>
